# ChangeLog for net-dns/unbound
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/ChangeLog,v 1.27 2011/07/03 01:28:00 matsuu Exp $

*unbound-1.4.11 (03 Jul 2011)

  03 Jul 2011; MATSUU Takuto <matsuu@gentoo.org> -unbound-1.4.8.ebuild,
  -unbound-1.4.9.ebuild, +unbound-1.4.11.ebuild:
  Version bumped. Fixed GNU stack issue. Added SUPPORT_PYTHON_ABIS="1". Removed
  old versions.

  31 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> unbound-1.4.10.ebuild:
  x86 stable wrt security bug #368981

  31 May 2011; Christoph Mende <angelos@gentoo.org> unbound-1.4.10.ebuild:
  Stable on amd64 wrt bug #368981

*unbound-1.4.10 (25 May 2011)

  25 May 2011; MATSUU Takuto <matsuu@gentoo.org> -unbound-1.4.3.ebuild,
  -unbound-1.4.6.ebuild, -unbound-1.4.7.ebuild, -unbound-1.4.7-r1.ebuild,
  +unbound-1.4.10.ebuild:
  Version bumped. Removed *.la files. Removed old versions.

  11 May 2011; Christoph Mende <angelos@gentoo.org> unbound-1.4.8.ebuild:
  Stable on amd64 wrt bug #362015

  07 May 2011; Thomas Kahle <tomka@gentoo.org> unbound-1.4.8.ebuild:
  x86 stable per bug 362015

*unbound-1.4.9 (11 Apr 2011)

  11 Apr 2011; MATSUU Takuto <matsuu@gentoo.org> +unbound-1.4.9.ebuild,
  metadata.xml:
  Version bumepd, bug #362013. Added proxied developer.

*unbound-1.4.8 (25 Jan 2011)

  25 Jan 2011; MATSUU Takuto <matsuu@gentoo.org> +unbound-1.4.8.ebuild:
  Version bumped. Added statis-libs USE flag.

*unbound-1.4.7-r1 (07 Dec 2010)

  07 Dec 2010; MATSUU Takuto <matsuu@gentoo.org> +unbound-1.4.7-r1.ebuild:
  Added net-dns/dnssec to RDEPEND, bug #347415.

  15 Nov 2010; MATSUU Takuto <matsuu@gentoo.org> unbound-1.4.6.ebuild,
  unbound-1.4.7.ebuild:
  Fixed dependency, bug #345253.

*unbound-1.4.7 (09 Nov 2010)

  09 Nov 2010; MATSUU Takuto <matsuu@gentoo.org> -unbound-1.4.4.ebuild,
  -unbound-1.4.5.ebuild, +unbound-1.4.7.ebuild, metadata.xml:
  Version bumped. Added gost USE flag. Removed old versions.
