@@ -1,6 +1,7 @@
+AUX unbound-1.4.12-gentoo.patch 639 RMD160 f3092ab9149ff47d0948aa650ba923e9e059b168 SHA1 6c753f0bc2dce7679a19d69d4ac4321c5c3270c5 SHA256 8223261764f067355a5c013b2c8b13384480c91782fc42ae339dcc8bed843448
 AUX unbound.confd 171 RMD160 090f4e941ed9469ea2b444c9862fff3a490e992e SHA1 cafbec0f4b23849bbc4288c8bc4d81cd867e4f6e SHA256 7da812ef83f8f8b9351363525ab6bebd5348faed76d0ae424dcbd7cb6a830dfd
-AUX unbound.initd 1174 RMD160 76161ab351f85b1e80895f01cc74269ee020dad7 SHA1 a453e1ad4c1e0ea9c4eacab3f2d185e0e764f538 SHA256 7465e1035f3cfbbc1e356ba6d0fff3a5c74fb8b9f2cc1d092a91fae27f23b582
-DIST unbound-1.4.12.tar.gz 3506466 RMD160 2e3a35f1e72046c9701cd3f51a8a2f58881a03d3 SHA1 c46c05d1fa2402a59c10f51864fd4c62d10a472f SHA256 d7f0ee340b8a62e3fe02e505fdf6f2e4742ae7eaf8fd1da200fb38c4947e2d66
-EBUILD unbound-1.4.12.ebuild 2782 RMD160 80514d3ce0e345c8bd0d5642d2608aab0fde969d SHA1 9a3811d5656f1e98fc6cab3c490139b315106b1d SHA256 93f71d772852614c09c21f9bf76abf94e59ba424943893f791b489f8311c0bae
-MISC ChangeLog 4160 RMD160 a867be72e4a41a3bc92d2a915a4e49afa9440dc6 SHA1 7711bc06b54b132c4e80ec3f39066284073b5de3 SHA256 ba99f72edc0ae18db4a28107298ee40c30d7d4eb260d8be21afe18a09e1b85a8
+AUX unbound.initd 1479 RMD160 9c0b945bc2bd2497c023d4d77f15a7656695d4da SHA1 37fcde8b17c8e2339e47c0298dfd8f3488dd7f3c SHA256 62cac1d151351d1e843cd0d8cc502ef92a3b47d818f620d2995601e0c6e7eadc
+DIST unbound-1.4.13.tar.gz 3511677 RMD160 f55623935e3772056a4ef10ff03cbb8805b30f1a SHA1 834ccfd1cb41a44f53b33f8338a8f9cc68febaf7 SHA256 83c7dc2756c488ab5bfcb9b25b81236a4ec42fb3d505267fcaf005555f3a2313
+EBUILD unbound-1.4.13.ebuild 2819 RMD160 d6b22ce96c0acb94a27fc1b6d5e4146e503ef84a SHA1 f67614c8d9f4c220ecc77c352874c75b3f07acb0 SHA256 1c4713c7fccf985602b77dc7d66f17a0549a86ecaa4322e827043cb741ac6cd0
+MISC ChangeLog 4582 RMD160 6ace12ab839a71b39936a8d34640ea1c0af9d6b1 SHA1 5f099a88a8389781c4fdfb9a405c0263359ca23a SHA256 35d8bf86a8ecd1160af375dda693c93fd1578bdb3c5df58159f005f45876e4d5
 MISC metadata.xml 1031 RMD160 0bd78b9a39982efbd2fcb3f95a97ab7765b98154 SHA1 94fd9c91b82a6a747c51d8d4bef073be7f3a58ee SHA256 d13d3e25ea0b34e78b692a6c7045903841d4ed7b0551589febe4fe36a9f25a7d
