@@ -1,9 +1,15 @@
 #!/sbin/runscript
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/files/unbound.initd,v 1.1 2009/11/22 16:57:33 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/files/unbound.initd,v 1.2 2011/09/13 15:14:49 matsuu Exp $
 
-opts="${opts} checkconfig reload"
+name="unbound daemon"
+extra_commands="configtest"
+extra_started_commands="reload"
+description="unbound is a Domain Name Server (DNS) that is used to resolve host names to IP address."
+description_configtest="Run syntax tests for configuration files only."
+description_reload="Kills all children and reloads the configuration."
+
 
 UNBOUND_BINARY=${UNBOUND_BINARY:-/usr/sbin/unbound}
 UNBOUND_CHECKCONF=${UNBOUND_CHECKCONF:-/usr/sbin/unbound-checkconf}
@@ -21,9 +27,15 @@ checkconfig() {
 	return $?
 }
 
+configtest() {
+	ebegin "Checking ${SVCNAME} configuration"
+	checkconfig
+	eend $?
+}
+
 start() {
 	checkconfig || return $?
-	ebegin "Starting unbound"
+	ebegin "Starting ${SVCNAME}"
 	start-stop-daemon --start --pidfile "${UNBOUND_PIDFILE}" \
 		--exec "${UNBOUND_BINARY}" -- -c "${UNBOUND_CONFFILE}"
 	eend $?
@@ -31,21 +43,14 @@ start() {
 
 stop() {
 	checkconfig || return $?
-	ebegin "Stopping unbound"
+	ebegin "Stopping ${SVCNAME}"
 	start-stop-daemon --stop --pidfile "${UNBOUND_PIDFILE}"
 	eend $?
 }
 
-restart() {
-	checkconfig || return $?
-	svc_stop
-	svc_start
-}
-
 reload() {
 	checkconfig || return $?
-	ebegin "Reloading unbound"
-	start-stop-daemon --stop --pidfile "${UNBOUND_PIDFILE}" \
-		--signal HUP --oknodo
+	ebegin "Reloading ${SVCNAME}"
+	start-stop-daemon --signal HUP --pidfile "${UNBOUND_PIDFILE}"
 	eend $?
 }
