@@ -1,6 +1,17 @@
 # ChangeLog for net-dns/unbound
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/ChangeLog,v 1.27 2011/07/03 01:28:00 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/ChangeLog,v 1.29 2011/09/13 15:14:49 matsuu Exp $
+
+*unbound-1.4.12-r1 (13 Sep 2011)
+
+  13 Sep 2011; MATSUU Takuto <matsuu@gentoo.org> +unbound-1.4.12-r1.ebuild,
+  files/unbound.initd:
+  Fixed python modules handling. The patch was submitted by Tom Hendrikx, bug
+  #378395. Removed oknodo from unbound.initd, bug #379947.
+
+  16 Jul 2011; MATSUU Takuto <matsuu@gentoo.org>
+  +files/unbound-1.4.12-gentoo.patch:
+  Version bumped. The ebuild was submitted by TANABE Ken-ichi.
 
 *unbound-1.4.11 (03 Jul 2011)
 
